# minimind_reproduce

./: AGENTS.md  CLAUDE.md  TODO.md  eval_llm.py  main.py  pyproject.toml  todo_history.md
00_Note/: 00_环境搭建.md  01_模型构建.md  01_环境搭建.md  02_RMSNorm归一化.md  03_reffer_layer.md  03_模型构建.md  04_RMSNorm归一化.md  05_RoPE+YaRN.md  06_GQA.md  06_refer_softmax.md  07_FFN.md  08_模块封装.md  09_refer_PretrainDataset.md  10_MoE_Forward.md  10_refer_Actual_Training_Methods.md  10_refer_ce_aux_loss.md  10_refer_shared_expert.md  10_refer_训练侧和推理侧实现逻辑.md  90_数据集路径与模型保存路径修改说明.md
00_Note/.obsidian/: app.json  workspace.json
dataset/: lm_dataset.py
model/: model.py  model_minimind.py
test/: __init__.py  _shared.py  test_attention_mask_flow.py  test_generation_smoke.py  test_model_cache_flow.py  test_pretrain_dataset.py
test/data/: test_pretrain_dataset.py
test/inference/: test_eval_llm_path.py
test/model/: test_attention.py  test_attention_mask_flow.py  test_block.py  test_ffn.py  test_generation_smoke.py  test_model_cache_flow.py  test_model_forward.py  test_rmsnorm.py
trainer/: train_pretrain.py  trainer_utils.py
